--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-16  Richard Henderson  <rth@redhat.com>
+
+	* gcc.dg/20020531-1.c: Add LL specifier to avoid warning.
+
 2002-06-15  Hans-Peter Nilsson  <hp@axis.com>
 
 	* gcc.c-torture/execute/20020615-1.c: New test.
