--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-06-16  Richard Henderson  <rth@redhat.com>
+
+	PR c/7030
+	* dwarf2out.c (modified_type_die): Don't assign the qualified die
+	to the unqualified type.
+
 2002-06-14  Jeff Sturm  <jsturm@one-point.com>
 
 	* config/sparc/sparc.h (DYNAMIC_CHAIN_ADDRESS): Add
