--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,15 @@
+2002-06-16  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* config.gcc: Add an i386/sysv4-cpp.h.  Remove i386-aout.h from
+	vxworks.
+config/i386:
+	* i386-aout.h, i386elf.h, sysv4.h: Remove CPP_PREDEFINES.
+	* linux64.h: Use TARGET_OS_CPP_BUILTINS rather than
+	CPP_PREDEFINES and part of CPP_SPEC.
+	i386elf.h, mach.h, netware.h, rtemself.h, sco5.h, sol2.h,
+	vsta.h, vxi386.h, win32.h: Similarly.
+	* sysv4-cpp.h: New.
+
 2002-06-16  Richard Henderson  <rth@redhat.com>
 
 	PR c/7030
