--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2002-06-16  Richard Henderson  <rth@redhat.com>
 
+	PR opt/6722
+	* regclass.c (globalize_reg): Update regs_invalidated_by_call.
+
+2002-06-16  Richard Henderson  <rth@redhat.com>
+
 	PR c/7030
 	* dwarf2out.c (modified_type_die): Don't assign the qualified die
 	to the unqualified type.
