--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,11 @@
 2002-06-16  Richard Henderson  <rth@redhat.com>
 
+	PR opt/6793
+	* tree.c (cp_cannot_inline_tree_fn): Don't short-circuit test
+	after template instantiation.
+
+2002-06-16  Richard Henderson  <rth@redhat.com>
+
 	* cp-tree.h, decl2.c (flag_ms_extensions): Move to c-common.
 
 2002-06-15  Gabriel Dos Reis  <gdr@codesourcery.com>
