* java/io/LineNumberInputStream.java: Merged with Classpath.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54691 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,7 @@
 2002-06-16  Tom Tromey  <tromey@redhat.com>
 
+	* java/io/LineNumberInputStream.java: Merged with Classpath.
+
 	* java/lang/RuntimeException.java: Re-merge with Classpath.
 	* java/util/ArrayList.java: Likewise.
 	* java/util/Arrays.java: Likewise.
