* config/i386/i386.h (BIGGEST_FIELD_ALIGNMENT): Define instead         of ADJUST_FIELD_ALIGN if IN_TARGET_LIBS.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54694 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2002-06-16  Richard Henderson  <rth@redhat.com>
 
+	* config/i386/i386.h (BIGGEST_FIELD_ALIGNMENT): Define instead
+	of ADJUST_FIELD_ALIGN if IN_TARGET_LIBS.
+
+2002-06-16  Richard Henderson  <rth@redhat.com>
+
 	PR opt/6722
 	* regclass.c (globalize_reg): Update regs_invalidated_by_call.
 
