Replace gen_sequence with get_insns.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54695 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-17  Nick Clifton  <nickc@cambridge.redhat.com>
+
+	* config/m32r/m32r.md: Replace gen_sequence with get_insns.
+
 2002-06-16  Richard Henderson  <rth@redhat.com>
 
 	* config/i386/i386.h (BIGGEST_FIELD_ALIGNMENT): Define instead
