--- a/gcc/config/m32r/m32r.md
+++ b/gcc/config/m32r/m32r.md
@@ -1681,7 +1681,7 @@
   start_sequence ();
   emit_insn (gen_cmp_ltusi_insn (op1, GEN_INT (1)));
   emit_insn (gen_movcc_insn (op0));
-  operands[3] = gen_sequence ();
+  operands[3] = get_insns ();
   end_sequence ();
 }")
 
@@ -1735,7 +1735,7 @@
 
   emit_insn (gen_cmp_ltusi_insn (op3, GEN_INT (1)));
   emit_insn (gen_movcc_insn (op0));
-  operands[4] = gen_sequence ();
+  operands[4] = get_insns ();
   end_sequence ();
 }")
 
