--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2002-06-17  Nick Clifton  <nickc@cambridge.redhat.com>
 
+	* config/fr30/fr30.h (CUMULATIVE_ARGS): Replace typedef with
+	#define.
+
 	* config/m32r/m32r.md: Replace gen_sequence with get_insns.
 
 2002-06-16  Richard Henderson  <rth@redhat.com>
