--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-17  Vladimir Makarov  <vmakarov@redhat.com>
+
+	* sched-ebb.c (init_ready_list): Check INSN_P first.
+
 Mon Jun 17 17:26:15 2002  J"orn Rennecke <joern.rennecke@superh.com>
 
 	* sh.md (divsi3): Update way how to find insns in a sequence.
