--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-06-17  Andreas Schwab  <schwab@suse.de>
+
+	* print-rtl.c (print_rtx): Print space before vector, not after.
+	(debug_rtx): Clear sawclose before printing.
+	(debug_rtx_list): Print newline after each list element.
+	(debug_rtx_range): Likewise.
+
 2002-06-17  Richard Henderson  <rth@redhat.com>
 
 	* function.h (struct function) [funcdef_no]: Rename profile_label_no.
