2002-06-17  Nathanael Nerode  <neroden@twcny.rr.com>
	* java/lang/ClassNotFoundException.java: New Classpath version.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54713 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,9 @@
 2002-06-17  Nathanael Nerode  <neroden@twcny.rr.com>
 
+	* java/lang/ClassNotFoundException.java: New Classpath version.
+
+2002-06-17  Nathanael Nerode  <neroden@twcny.rr.com>
+
 	* java/rmi/activation/ActivateFailedException.java: Remerge from
 	Classpath version.
 	* java/rmi/activation/ActivationException.java: Ditto.
