--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2002-06-17  Richard Henderson  <rth@redhat.com>
 
+	* config/i386/i386.h (BIGGEST_FIELD_ALIGNMENT): Define instead
+	of ADJUST_FIELD_ALIGN if IN_TARGET_LIBS.
+
+2002-06-17  Richard Henderson  <rth@redhat.com>
+
 	PR target/6922
 	* expmed.c (make_tree): Handle SIGN_EXTEND/ZERO_EXTEND.
 
