* expmed.c (make_tree): Handle SIGN_EXTEND/ZERO_EXTEND.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54716 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-06-17  Richard Henderson  <rth@redhat.com>
+
+	PR target/6922
+	* expmed.c (make_tree): Handle SIGN_EXTEND/ZERO_EXTEND.
+
 2002-06-17  Tom Tromey  <tromey@redhat.com>
 
 	* dwarfout.c: Include function.h.
