* libgcc2.c: Do not include symcat.h or machmode.h.
From-SVN: r54717

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-17  Jeff Law <law@redha.com>
+
+	* libgcc2.c: Do not include symcat.h or machmode.h.
+
 2002-06-17  Richard Henderson  <rth@redhat.com>
 
 	PR target/6922
