* bit.c: Don't include glimits.h. * target.c: Likewise. * where.h: Likewise.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54718 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,9 @@
+2002-06-17  Jason Thorpe  <thorpej@wasabisystems.com>
+
+	* bit.c: Don't include glimits.h.
+	* target.c: Likewise.   
+	* where.h: Likewise.
+
 2002-06-12  Gabriel Dos Reis  <gdr@codesourcery.com>
 
 	* bad.c (ffebad_start_): Adjust calls to diagnostic_count_error.
