--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-17  Matt Kraai  <kraai@alumni.cmu.edu>
+
+	* doc/extend.texi (Function Attributes): Remove `,...' from @var.
+
 2002-06-17  Jeff Law <law@redha.com>
 
 	* libgcc2.c: Do not include symcat.h or machmode.h.
