* gcj/javaprims.h: Updated class declaration list. 	* Makefile.in: Rebuilt. 	* Makefile.am (core_java_source_files): Added new file. 	* java/util/EventListenerProxy.java: New file. 	* java/util/EventListener.java: Re-merge with Classpath. 	* java/util/EventObject.java: Re-merge with Classpath.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54720 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,12 @@
+2002-06-17  Tom Tromey  <tromey@redhat.com>
+
+	* gcj/javaprims.h: Updated class declaration list.
+	* Makefile.in: Rebuilt.
+	* Makefile.am (core_java_source_files): Added new file.
+	* java/util/EventListenerProxy.java: New file.
+	* java/util/EventListener.java: Re-merge with Classpath.
+	* java/util/EventObject.java: Re-merge with Classpath.
+
 2002-06-17  Nathanael Nerode  <neroden@twcny.rr.com>
 
 	* java/lang/ClassNotFoundException.java: New Classpath version.
