--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-18  Alan Modra  <amodra@bigpond.net.au>
+
+	* doloop.c (doloop_optimize): Extract pattern from insn.
+
 2002-06-17  Matt Kraai  <kraai@alumni.cmu.edu>
 
 	* doc/extend.texi (Function Attributes): Remove `,...' from @var.
