--- a/gcc/config/ia64/ia64.md
+++ b/gcc/config/ia64/ia64.md
@@ -4284,8 +4284,8 @@
 		(label_ref (match_operand 1 "" ""))
 		(pc)))
    (set (match_dup 0) (if_then_else:DI (ne (match_dup 0) (const_int 0))
-			 (match_dup 0)
-			 (plus:DI (match_dup 0) (const_int -1))))]
+			 (plus:DI (match_dup 0) (const_int -1))
+			 (match_dup 0)))]
   ""
   "br.cloop.sptk.few %l1"
   [(set_attr "itanium_class" "br")
