--- a/gcc/doc/extend.texi
+++ b/gcc/doc/extend.texi
@@ -4373,28 +4373,52 @@ A floating point value, as wide as a SI mode integer, usually 32 bits.
 A floating point value, as wide as a DI mode integer, usually 64 bits.
 @end table
 
-Not all base types or combinations are always valid; which modes can be used
-is determined by the target machine.  For example, if targetting the i386 MMX
-extensions, only @code{V8QI}, @code{V4HI} and @code{V2SI} are allowed modes.
-
 There are no @code{V1xx} vector modes - they would be identical to the
 corresponding base mode.
 
-There is no distinction between signed and unsigned vector modes.  This
-distinction is made by the operations that perform on the vectors, not
-by the data type.
+Specifying a combination that is not valid for the current architecture
+will cause gcc to synthesize the instructions using a narrower mode.
+For example, if you specify a variable of type @code{V4SI} and your
+architecture does not allow for this specific SIMD type, gcc will
+produce code that uses 4 @code{SIs}.
 
-The types defined in this manner are somewhat special, they cannot be
-used with most normal C operations (i.e., a vector addition can @emph{not}
-be represented by a normal addition of two vector type variables).  You
-can declare only variables and use them in function calls and returns, as
-well as in assignments and some casts.  It is possible to cast from one
-vector type to another, provided they are of the same size (in fact, you
-can also cast vectors to and from other datatypes of the same size).
+The types defined in this manner can be used with a subset of normal C
+operations.  Currently, gcc will allow using the following operators on
+these types: @code{+, -, *, /, unary minus}@.
 
-A port that supports vector operations provides a set of built-in functions
-that can be used to operate on vectors.  For example, a function to add two
-vectors and multiply the result by a third could look like this:
+The operations behave like C++ @code{valarrays}.  Addition is defined as
+the addition of the corresponding elements of the operands.  For
+example, in the code below, each of the 4 elements in @var{a} will be
+added to the corresponding 4 elements in @var{b} and the resulting
+vector will be stored in @var{c}.
+
+@example
+typedef int v4si __attribute__ ((mode(V4SI)));
+
+v4si a, b, c;
+
+c = a + b;
+@end example
+
+Subtraction, multiplication, and division operate in a similar manner.
+Likewise, the result of using the unary minus operator on a vector type
+is a vector whose elements are the negative value of the corresponding
+elements in the operand.
+
+You can declare variables and use them in function calls and returns, as
+well as in assignments and some casts.  You can specify a vector type as
+a return type for a function.  Vector types can also be used as function
+arguments.  It is possible to cast from one vector type to another,
+provided they are of the same size (in fact, you can also cast vectors
+to and from other datatypes of the same size).
+
+You cannot operate between vectors of different lengths or different
+signness without a cast.
+
+A port that supports hardware vector operations, usually provides a set
+of built-in functions that can be used to operate on vectors.  For
+example, a function to add two vectors and multiply the result by a
+third could look like this:
 
 @example
 v4si f (v4si a, v4si b, v4si c)
