2002-06-16  Aldy Hernandez  <aldyh@redhat.com>
        * gcc.c-torture/execute/simd-1.c: New.

        * gcc.dg/simd-1.c: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54728 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2002-06-18  Aldy Hernandez  <aldyh@redhat.com>
+
+        * gcc.c-torture/execute/simd-1.c: New.
+
+        * gcc.dg/simd-1.c: New.
+
 2002-06-18  Hans-Peter Nilsson  <hp@axis.com>
 
 	* gcc.c-torture/execute/20020615-1.c: Correct bug-description.
