--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-18  Hans-Peter Nilsson  <hp@axis.com>
+
+	* gcc.c-torture/execute/20020615-1.c: Fix typo in comment.
+	
 2002-06-18  Aldy Hernandez  <aldyh@redhat.com>
 
         * gcc.c-torture/execute/simd-1.c: New.
