C++ ABI changes.         * class.c (build_base_field): Set DECL_PACKED.         (layout_class_type): Don't use tail padding of PODs.         * mangle.c (write_unqualified_name): Fix template conversion op         mangling.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54747 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,11 @@
+2002-06-14  Jason Merrill  <jason@redhat.com>
+
+	C++ ABI changes.
+	* class.c (build_base_field): Set DECL_PACKED.
+	(layout_class_type): Don't use tail padding of PODs.
+	* mangle.c (write_unqualified_name): Fix template conversion op
+	mangling.
+
 2002-06-16  Richard Henderson  <rth@redhat.com>
 
 	PR opt/6793
