--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,11 @@
+2002-06-18  Tom Tromey  <tromey@redhat.com>
+
+	* gcj/javaprims.h: Updated class declaration list.
+	* Makefile.in: Rebuilt.
+	* Makefile.am (core_java_source_files): Removed
+	BasicMapEntry.java.
+	* java/util/BasicMapEntry.java: Removed.
+
 2002-06-18  Jeff Sturm  <jsturm@one-point.com>
 
 	* java/net/natPlainDatagramSocketImpl.cc (receive):
